@@ -1,3 +1,7 @@
+2011-03-24  6.6.8-7 Cristy  <quetzlzacatenango@image...>
+  * Add support for 16-bit DCM short ints (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18371).
+
 2011-03-23 6.6.8-7 Anthony Thyssen <A.Thyssen@griffith...>
   * Another fix for -sparse-color and unused color channels
   * Finialize the -duplicate option created by Cristy
